--- a/src/main/resources/templates/visit.html
+++ b/src/main/resources/templates/visit.html
@@ -10,7 +10,7 @@
 <!--头部工具栏-->
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container">
-        <button class="layui-btn layui-btn-sm" lay-event="addVisit">添加回访信息</button>
+        <button class="layui-btn layui-btn-xs" lay-event="addVisit">添加回访信息</button>
     </div>
 </script>
 <!--行工具栏-->
