--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -78,7 +78,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">客户编号</label>
         <div class="layui-input-inline">
-            <input type="number" name="customId" th:value="${customId}" required lay-verify="required" placeholder="请输入客户编号" autocomplete="off"
+            <input type="number" name="customId" id="addCustomTableSelect" readonly th:value="${customId}" required lay-verify="required" placeholder="请输入客户编号" autocomplete="off"
                    class="layui-input">
         </div>
         <label class="layui-form-label">备注</label>
@@ -162,7 +162,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">客户编号</label>
         <div class="layui-input-inline">
-            <input type="number" name="customId" required lay-verify="required" placeholder="请输入客户名" autocomplete="off"
+            <input type="number" name="customId" readonly id="updateCustomTableSelect" required lay-verify="required" placeholder="请输入客户编号" autocomplete="off"
                    class="layui-input">
         </div>
         <label class="layui-form-label">备注</label>
@@ -243,12 +243,68 @@
     </div>
 </form>
 <script>
-    layui.use(['table', 'layer', 'jquery', 'laydate', 'form'], function () {
+    //自定义layui组件的目录
+    layui.config({
+        base: '/layui/lay/modules/'
+    }).extend({
+        //设定组件别名
+        tableSelect: 'tableSelect',
+    });
+    layui.use(['table', 'layer', 'jquery', 'laydate', 'form','tableSelect'], function () {
         var table = layui.table;
         var layer = layui.layer;
         var $ = layui.jquery;
         var form = layui.form;
         var laydate = layui.laydate;
+        var tableSelect = layui.tableSelect;
+
+        //添加客户编号选择表格
+        tableSelect.render({
+            elem: '#addCustomTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'customId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'contact',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '联系人姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url:'/custom/selectAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        ,{field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
+                        , {field: 'phone', title: '手机号', align: 'center', width: 140}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].customId)
+            }
+        })
+        //修改客户编号选择表格
+        tableSelect.render({
+            elem: '#updateCustomTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'customId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'contact',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '联系人姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url:'/custom/selectAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        ,{field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
+                        , {field: 'phone', title: '手机号', align: 'center', width: 140}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].customId)
+            }
+        })
+
         //日期
         laydate.render({
             elem: '#date'
