--- a/src/main/resources/templates/custom.html
+++ b/src/main/resources/templates/custom.html
@@ -36,7 +36,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">代理人ID：</label>
             <div class="layui-input-inline">
-                <input type="number" name="proxyId" lay-verify="required" placeholder="" autocomplete="off"
+                <input type="number" name="proxyId" readonly id="addUserTableSelect" lay-verify="required" placeholder="" autocomplete="off"
                        class="layui-input">
             </div>
         </div>
@@ -92,7 +92,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">代理人ID：</label>
             <div class="layui-input-inline">
-                <input type="number" name="proxyId" lay-verify="required" placeholder="" autocomplete="off"
+                <input type="number" name="proxyId" readonly id="updateUserTableSelect" lay-verify="required" placeholder="" autocomplete="off"
                        class="layui-input">
             </div>
         </div>
@@ -155,11 +155,70 @@
 </body>
 
 <script>
-    layui.use('table', function () {
+    //自定义layui组件的目录
+    layui.config({
+        base: '/layui/lay/modules/'
+    }).extend({
+        //设定组件别名
+        tableSelect: 'tableSelect',
+    });
+    layui.use(['table', 'layer', 'jquery', 'laydate', 'form','tableSelect'], function () {
         var table = layui.table;
         var $ = layui.jquery;
         var layer = layui.layer;
         var form = layui.form;
+        var tableSelect = layui.tableSelect;
+
+
+        //添加代理人选择表格
+        tableSelect.render({
+            elem: '#addUserTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'userId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'userName',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '真实姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url:'/user/findAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        , {field: 'userId', title: '编号', width: 80, sort: true}
+                        , {field: 'loginName', title: '登录名', width: 100}
+                        , {field: 'userName', title: '真实姓名', width: 120}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].userId)
+            }
+        })
+
+        //修改代理人选择表格
+        tableSelect.render({
+            elem: '#updateUserTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'userId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'userName',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '真实姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url:'/user/findAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        , {field: 'userId', title: '编号', width: 80, sort: true}
+                        , {field: 'loginName', title: '登录名', width: 100}
+                        , {field: 'userName', title: '真实姓名', width: 120}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].userId)
+            }
+        })
+
+
         //第一个实例
         var myTable = table.render({
             elem: '#demo'
@@ -228,7 +287,7 @@
                 location.href = "/business/showCustomAndBusiness?customId=" + data.customId
             } else if (layEvent === 'visit') {
                 //携带数据跳转到回访登记页面
-                layer.msg("携带数据跳转到回访登记页面")
+                location.href = "/visit/showCustomAndVisit?customId=" + data.customId
             }
         });
 
