--- a/src/main/resources/templates/visit.html
+++ b/src/main/resources/templates/visit.html
@@ -24,7 +24,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">客户ID：</label>
         <div class="layui-input-inline">
-            <input type="number" name="customId" lay-verify="required" placeholder="" autocomplete="off"
+            <input type="number" name="customId" id="addCustomTableSelect" readonly th:value="${customId}" lay-verify="required" placeholder="" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">客户ID：</label>
         <div class="layui-input-inline">
-            <input type="number" name="customId" lay-verify="required" placeholder="" autocomplete="off"
+            <input type="number" name="customId" readonly id="updateCustomTableSelect" lay-verify="required" placeholder="" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -81,19 +81,110 @@
 </form>
 
 <body>
+<table id="customTable" lay-filter="customFilter"></table>
 <table id="demo" lay-filter="test"></table>
 </body>
 
 <script>
-    layui.use('table', function () {
+    //自定义layui组件的目录
+    layui.config({
+        base: '/layui/lay/modules/'
+    }).extend({
+        //设定组件别名
+        tableSelect: 'tableSelect',
+    });
+    layui.use(['table', 'layer', 'jquery', 'laydate', 'form','tableSelect'], function () {
         var table = layui.table;
         var $ = layui.jquery;
         var layer = layui.layer;
         var form = layui.form;
+        var tableSelect = layui.tableSelect;
+
+        //添加客户编号选择表格
+        tableSelect.render({
+            elem: '#addCustomTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'customId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'contact',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '联系人姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url:'/custom/selectAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        ,{field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
+                        , {field: 'phone', title: '手机号', align: 'center', width: 140}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].customId)
+            }
+        })
+
+        //修改客户编号选择表格
+        tableSelect.render({
+            elem: '#updateCustomTableSelect',	//定义输入框input对象 必填
+            checkedKey: 'customId', //表格的唯一建值，非常重要，影响到选中状态 必填
+            searchKey: 'contact',	//搜索输入框的name值 默认keyword
+            searchPlaceholder: '联系人姓名搜索',	//搜索输入框的提示文字 默认关键词搜索
+            table: {	//定义表格参数，与LAYUI的TABLE模块一致，只是无需再定义表格elem
+                url:'/custom/selectAll',
+                cols: [
+                    [
+                        {type: 'radio'}
+                        ,{field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
+                        , {field: 'phone', title: '手机号', align: 'center', width: 140}
+                    ]
+                ]
+            },
+            done: function (elem, data) {
+                //选择完后的回调，包含2个返回值 elem:返回之前input对象；data:表格返回的选中的数据 []
+                //拿到data[]后 就按照业务需求做想做的事情啦~比如加个隐藏域放ID...
+                elem.val(data.data[0].customId)
+            }
+        })
+
+        //获取传过来的customId
+        var customId = "";
+        customId = [[${customId}]]+"";
+
+        if (customId == 0){
+            document.getElementById("customTable").hidden = true
+        }else {
+            document.getElementById("customTable").hidden = false
+            let customUrl = '/custom/selectOne?customId='+customId
+            var customTable = table.render({
+                elem: '#customTable'
+                , url: customUrl //数据接口
+                , page: false //开启分页
+                , cols: [
+                    [ //表头
+                        {field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                        , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
+                        , {field: 'phone', title: '手机号', align: 'center', width: 140}
+                        , {field: 'applicant', title: '申请人', align: 'center', width: 120}
+                        , {field: 'customAddress', title: '邮寄地址', align: 'center', width: 120}
+                        , {field: 'createBy', title: '创建人', align: 'center', width: 120}
+                        , {field: 'createTime', title: '创建时间', align: 'center', width: 160}
+                        , {field: 'updateBy', title: '修改人', align: 'center', width: 120}
+                        , {field: 'updateTime', title: '修改时间', align: 'center', width: 160}
+                        , {field: 'proxyId', title: '代理人ID', align: 'center', width: 120}
+                        , {field: 'remark', title: '备注', align: 'center', width: 120}
+                    ]
+                ]
+            });
+        }
+
+
+        var visitUrl='/visit/selectAll?customId='+customId
         //第一个实例
         var myTable = table.render({
             elem: '#demo'
-            , url: '/visit/selectAll' //数据接口
+            , url:visitUrl //数据接口
             , toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
             , page: true //开启分页
             , limit: 5
