--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -20,12 +20,12 @@
             <input type="text" name="progressType" placeholder="请输入进度类型" autocomplete="off" class="layui-input">
         </div>
     </div>
-    <div class="layui-inline">
-        <label class="layui-form-label">业务ID</label>
-        <div class="layui-input-inline">
-            <input type="number" name="businessId" placeholder="请输入业务ID" autocomplete="off" class="layui-input">
-        </div>
-    </div>
+<!--    <div class="layui-inline">-->
+<!--        <label class="layui-form-label">业务ID</label>-->
+<!--        <div class="layui-input-inline">-->
+<!--            <input type="number" name="businessId" placeholder="请输入业务ID" autocomplete="off" class="layui-input">-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="layui-inline">
         <div class="layui-input-inline">
             <button class="layui-btn" lay-submit lay-filter="selectFormfilter">查询</button>
@@ -321,6 +321,7 @@
                 ]
             });
         }
+
 
 
         //生成menuTable表格
