--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -21,7 +21,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">申请号</label>
         <div class="layui-input-block">
-            <input type="text" name="applicantCode" required lay-verify="required" placeholder="请输入申请号"
+            <input type="text" name="applicantCode"  lay-verify="required" placeholder="请输入申请号"
                    autocomplete="off"
                    class="layui-input">
         </div>
@@ -83,7 +83,7 @@
         </div>
         <label class="layui-form-label">备注</label>
         <div class="layui-input-inline">
-            <input type="text" name="remark" required lay-verify="required" placeholder="请输入备注" autocomplete="off"
+            <input type="text" name="remark"  lay-verify="required" placeholder="请输入备注" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -97,7 +97,7 @@
     </div>
 </form>
 
-
+<!--编辑业务-->
 <form class="layui-form" id="editForm" lay-filter="example" name="edit"
       style="display: none;margin-right: 40px;margin-top: 20px">
 
@@ -116,6 +116,8 @@
             <input type="number" name="customId" readonly id="updateCustomTableSelect" required lay-verify="required" placeholder="请输入客户编号" autocomplete="off"
                    class="layui-input">
         </div>
+
+
         <label class="layui-form-label">业务类型</label>
         <div class="layui-input-inline">
             <select id="updateTopType" name="businessTopType">
@@ -182,7 +184,7 @@
 
 </form>
 
-
+<!--条件查询搜索框-->
 <form class="layui-form" id="query" action="" style="margin-top: 20px">
     <div class="layui-inline">
         <label class="layui-form-label">业务名</label>
